cd/app/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chess-api
  namespace: chess-with-actors
spec:
  selector:
    app: chess-api
  type: ClusterIP
  ports:
    - port: 80
