cd/app/api/ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1  
kind: IngressRoute  
metadata:  
  name: chess-api
  namespace: chess-with-actors
spec:  
  entryPoints:
    - web
  routes:
  - match: Host(`chess.localhost`) && PathPrefix(`/hubs`, `/api`)
    kind: Rule
    services:
    - name: chess-api
      port: 80
